--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "You must run <npm install> to get all the pakages ;)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/Davidcastel26/expressApp/issues"
   },
-  "homepage": "https://github.com/Davidcastel26/expressApp#readme"
+  "homepage": "https://github.com/Davidcastel26/expressApp#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
+  }
 }
